# LoSSETT_ANCIL

./: .gitignore  LICENSE  README.md  Tutorial.ipynb  Tutorial.py  pyproject.toml
src/lossett_ancil/plot/: LoSSETT_Plotting_General.ipynb  Stats_Plotting_LoSSETT.ipynb  Stats_Plotting_LoSSETT.py  TEST_LOSSETT_ERA5_HK25.ipynb  plot_DR_indicator.py  plot_DR_u-dc009.py  submit_plot_DR_indicator.sh  submit_plot_DR_vs_ell.sh
src/lossett_ancil/postprocess/: convert_to_32_bit.py
src/lossett_control/: TEST_run_lossett_dyn.sh  filter_kscale_0p5deg.py  filter_kscale_precip_0p1deg.py  run_lossett_era5_0p5deg.py  run_lossett_era5_0p5deg_chunk_test.py  run_lossett_era5_chunk_testing.py  run_lossett_kscale_0p5deg.py  run_lossett_kscale_0p5deg_embedded.py  run_lossett_kscale_n1280.py  run_lossett_kscale_n1280_embedded.py  run_lossett_kscale_n640.py  run_lossett_kscale_native.py  submit_calc_DR_indicator_DS_CTC5GAL.sh  submit_calc_DR_indicator_DS_CTC5RAL.sh  submit_calc_DR_indicator_chunk_testing.sh  submit_calc_DR_indicator_era5_0p5deg.sh  submit_calc_DR_indicator_era5_0p5deg_chunk_test.sh  submit_calc_DR_indicator_kscale_native.sh  submit_calc_DR_indicator_kscale_native_00.sh  submit_calc_DR_indicator_kscale_native_12.sh  submit_calc_DR_indicator_kscale_native_debug.sh  submit_calc_DR_indicator_kscale_native_part_high_00.sh  submit_calc_DR_indicator_kscale_native_serial_00.sh  submit_calc_DR_indicator_kscale_native_serial_12.sh  submit_calc_DR_indicator_u-dc009.sh  submit_calc_scale_increments.sh
src/lossett_plot/: plot_DR_vs_ell.py  plot_scale_increments.py
(+28 files in other folders)
